# StarsBot

./: .env  .env.dev  API.md  Config.md  LICENSE  Main.py  README.md  pyproject.toml  requirements.txt
Profile/Menu/Function/: Fun.json
Profile/Menu/Game/: Fun.json
src/plugins/nonebot_plugin_60sworld/: README.md  __init__.py
src/plugins/nonebot_plugin_alipay/: README.md  __init__.py
src/plugins/nonebot_plugin_bing/: README.md  __init__.py
src/plugins/nonebot_plugin_chat/: README.md  __init__.py
src/plugins/nonebot_plugin_genshinwallpapers/: README.md  __init__.py
src/plugins/nonebot_plugin_guessriddles/: README.md  __init__.py
src/plugins/nonebot_plugin_historytoday/: README.md  __init__.py  getdata.py
src/plugins/nonebot_plugin_hitokoto/: README.md  __init__.py
src/plugins/nonebot_plugin_hotlist/: README.md  __init__.py
src/plugins/nonebot_plugin_joke/: README.md  __init__.py
src/plugins/nonebot_plugin_menu/: README.md  __init__.py
src/plugins/nonebot_plugin_neteasemusic/: README.md  __init__.py
src/plugins/nonebot_plugin_qranalysis/: __init__.py
src/plugins/nonebot_plugin_qunmanage/: README.md  __init__.py
src/plugins/nonebot_plugin_songs/: README.md  __init__.py
src/plugins/nonebot_plugin_status/: README.md  __init__.py
src/plugins/nonebot_plugin_textualfault/: README.md  __init__.py
src/plugins/nonebot_plugin_timing/: README.md  __init__.py  utils.py
src/plugins/nonebot_plugin_videoparsing/: README.md  (+1 more)
utils/: AdminTool.py  AdminTool使用.md  FileUtils.py  ImageDownloader.py  Network.py  RedirectResolverHttpx.py  Tool.py
(+4 files in other folders)
